# py3spread

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: examples.md  index.md
docs/guides/: authentication.md  data-conventions.md  errors.md  pagination.md  sync.md
docs/reference/: client.md  exceptions.md  resources.md
examples/: README.md  beneficial_ownership.py  changefeed_sync.py  coverage_and_freshness.py  errors_and_retries.py  export_csv.py  fund_portfolios.py  insider_activity.py  institutional_holdings.py  money_market_funds.py  private_offerings.py  quickstart.py  sec_tape.py
examples/notebooks/: activist_radar.ipynb  company_360.ipynb  conviction_clone.ipynb  form144_follow_through.ipynb  form4_price_chart.ipynb  form_d_heatmap.ipynb  fund_overlap.ipynb  getting_started.ipynb  insider_analysis.ipynb  insider_dossier.ipynb  insider_vs_institutions.ipynb  institutional_13f.ipynb  mmf_stress.ipynb  nport_xray.ipynb  rate_cycle.ipynb  tenb5_tracker.ipynb  whale_quarter_diff.ipynb
src/py3spread/: __init__.py  client.py  exceptions.py
src/py3spread/resources/: __init__.py  _base.py  beneficial_ownership.py  filings.py  fund_census.py  fund_portfolios.py  insiders.py  institutional_holdings.py  money_market_funds.py  private_offerings.py  proposed_sales.py  proxy_votes.py  reg_a_offerings.py  registration_statements.py  system.py
tests/: conftest.py  test_client.py  test_errors.py  test_pagination.py  test_resources.py
