[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py3spread"
dynamic = ["version"]
description = "Python client for the 3spread API (machine-readable SEC filing data)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "3spread" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.24"]
keywords = ["sec", "edgar", "filings", "13f", "insider", "financial-data", "3spread"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://3spread.com"
Documentation = "https://3spread.com/docs"
Repository = "https://github.com/3spread/py3spread"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.version]
path = "src/py3spread/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py3spread"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
