[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "py3spread"
dynamic = ["version", "readme"]
description = "Python client for the 3spread API (machine-readable SEC filing data)"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "3spread" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.24"]
keywords = ["sec", "edgar", "filings", "13f", "insider", "financial-data", "3spread"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://3spread.com"
Documentation = "https://3spread.github.io/py3spread/"
"API Reference" = "https://3spread.com/docs"
Repository = "https://github.com/3spread/py3spread"

[project.optional-dependencies]
dev = ["pytest>=7"]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.24",
]

[tool.hatch.version]
path = "src/py3spread/_version.py"

# the repo readme uses relative links so github renders them on any branch;
# rewrite them to absolute urls for the pypi page at build time
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '!\[([^\]]*)\]\(examples/'
replacement = '![\1](https://raw.githubusercontent.com/3spread/py3spread/main/examples/'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\(examples/'
replacement = '](https://github.com/3spread/py3spread/blob/main/examples/'

[tool.hatch.build.targets.wheel]
packages = ["src/py3spread"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
